<resources>
    <string-array name="dayNames">
        <item>Понедельник</item>
        <item>Вторник</item>
        <item>Среда</item>
        <item>Четверг</item>
        <item>Пятница</item>
        <item>Суббота</item>
        <item>Воскресенье</item>
    </string-array>
    <string name="app_name">Schedule</string>
    <string name="title_home">Главная</string>
    <string name="title_subjects">Предметы</string>
    <string name="title_timetable">Расписание</string>
    <string name="title_profile">Профиль</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_timetable">Видимо, вы пока не создали расписание. Нажмите на кнопку внизу справа, чтобы создать его</string>
    <string name="no_subjects">Видимо, вы пока не добавили предметы. Нажмите на кнопку внизу справа, чтобы добавить</string>
    <string name="title_activity_add_subject">AddSubject</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="subject_name">Название предмета</string>
    <string name="teacher_name_hint">ФИО преподавателя</string>
    <string name="lections">Лекции</string>
    <string name="practics">Практические занятия</string>
    <string name="labs">Лабораторные работы</string>
    <string name="sbj_start_time">Время начала</string>
    <string name="sbj_end_time">Время конца</string>
    <string name="edit_subject">Изменить предмет</string>
    <string name="delete_subject">Удалить предмет</string>
    <string name="auditory_number_hint">ауд.</string>
    <string name="title_duties">Долги</string>
    <string name="duty_name">Название долга</string>
    <string name="pass_date">Дата сдачи</string>
    <string name="no_duties">Долгов пока не добавлено. Добавить их можно по нажатию кнопки внизу справа</string>
    <string name="excercises_ended">Пары закончились</string>
    <string name="extra_info">Дополнительная информация</string>
    <string name="save">Сохранить</string>
    <string name="delete">Удалить</string>
    <string name="not_set_up_fully">Видимо, у вас не созданы предметы, или не добавлено расписание предметов или звонков. Добавить это всё можно на соответствующих вкладках</string>
    <string name="nothing_in_here">Тут пока ничего нет</string>
    <string name="change_schedule">Изменить расписание</string>
    <string name="change_timeline">Изменить расписание звонков</string>
    <string name="different_timeline_everyday">Расписание звонков разное каждый день</string>
    <string name="edit">Редактировать</string>
    <string name="subject_menu">Subject Menu</string>
    <string name="lessons_count">Кол-во пар</string>
    <string name="duty_menu">Меню долга</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="extra_data">Дополнительная информация</string>
    <string name="choose_pass_date">Выберите дату сдачи</string>
    <string name="on_even_week">По чётным неделям</string>
    <string name="on_odd_week">По нечётным неделям</string>
    <string name="day_of_week">День недели</string>
    <string name="clear_subjects">Очистить предметы</string>
    <string name="clear_timetable">Очистить расписание</string>
    <string name="clear_timeline">Очистить расписание звонков</string>
    <string name="clear_timeline_exceptions">Очистить исключения расписания звонков</string>
    <string name="clear_duties">Очистить долги</string>
</resources>