<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_subjects"
        android:icon="@drawable/ic_subjects"
        android:title="@string/title_subjects" />

    <item
        android:id="@+id/navigation_timetable"
        android:icon="@drawable/ic_timetable"
        android:title="@string/title_timetable" />
    <item
        android:id="@+id/navigation_duties"
        android:icon="@drawable/ic_duties"
        android:title="@string/title_duties" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/title_profile" />
</menu>