<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddSubject">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:contentDescription="@string/app_name"
        android:onClick="addSubject"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_save"
        tools:ignore="UsingOnClickInXml" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="601dp"
        android:padding="20.0dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="1dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="1dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/subject_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/subject_name"
                android:textColorHint="#616161" />
        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/if_lections"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lections"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/lector_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/teacher_name_hint"
            android:minHeight="48dp"
            android:textColorHint="#616161"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/if_lections"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <CheckBox
            android:id="@+id/if_practics"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/practics"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lector_name" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/practics_teacher_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/teacher_name_hint"
            android:minHeight="48dp"
            android:textColorHint="#616161"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/if_practics" />

        <CheckBox
            android:id="@+id/if_labs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/labs"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/practics_teacher_name" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/labs_teacher_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/teacher_name_hint"
            android:minHeight="48dp"
            android:textColorHint="#616161"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/if_labs" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>