<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".AddDuty">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/duty_name_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="3sp"
            android:layout_marginHorizontal="10sp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/duty_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/duty_name" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/subject_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="3sp"
            android:layout_marginHorizontal="10sp"
            android:padding="10sp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10sp"
                    android:text="@string/subject_name"
                    android:textSize="16sp" />

                <Spinner
                    android:id="@+id/subject_name_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="20sp" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/datePickerCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="3sp"
            android:layout_marginHorizontal="10sp"
            android:padding="10sp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pass_date"
                    android:padding="10sp"
                    android:textSize="16sp" />

                <DatePicker
                    android:id="@+id/datePicker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="10sp" />

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:contentDescription="@string/title_duties"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@drawable/ic_add" />
</androidx.constraintlayout.widget.ConstraintLayout>
